MCM Toggles for Colossals and Experimental Weapons

--- a/Translations/DLSE_EN.csv
+++ b/Translations/DLSE_EN.csv
@@ -2,6 +2,8 @@ KDModButtonDLSEMCM,"Doll.Lia's Toy Box"
 KDModButtonDLSEMCM_Header_Weapons,"Options to configure weapons:"
 KDModButtonDLSEMCM_Whips,"Enable Whips"
 KDModButtonDLSEMCM_Halberds,"Enable Halberds"
+KDModButtonDLSEMCM_Colossals,"Enable Colossal Weapons"
+KDModButtonDLSEMCM_Relics,"Enable Experimental Weapons"
 KDModButtonDLSEMCM_Shops,"Add new items to The Shoppe"
 KDModButtonDLSEMCM_Classes,"Enable new Class Spells"
 KDModButtonDLSEMCM_Light,"Enable new Light Spells"
