Thrusting Swords category.

--- a/Translations/DLSE_EN.csv
+++ b/Translations/DLSE_EN.csv
@@ -3,7 +3,7 @@ KDModButtonDLSEMCM_Header_Weapons,"Options to configure weapons:"
 KDModButtonDLSEMCM_Whips,"Enable Whips"
 KDModButtonDLSEMCM_Halberds,"Enable Halberds"
 KDModButtonDLSEMCM_Colossals,"Enable Colossal Weapons"
-KDModButtonDLSEMCM_Relics,"Enable Experimental Weapons"
+KDModButtonDLSEMCM_ThrustingSwords,"Enable Thrusting Swords"
 KDModButtonDLSEMCM_Shops,"Add new items to The Shoppe"
 KDModButtonDLSEMCM_Classes,"Enable new Class Spells"
 KDModButtonDLSEMCM_Light,"Enable new Light Spells"
@@ -156,11 +156,11 @@ KinkyDungeonInventoryItemDLSE_ColossalSwordDesc2,"Deals terrifying slash damage 
 ItemPickupDLSE_ColossalSword,"You struggle to pick up a sword as big as yourself!"
 KinkyDungeonSpecialDLSE_ColossalSword,"Giant Swing: Strike all targets in an arc for 2x SP cost, knocking them back."
 
-KinkyDungeonInventoryItemDLSE_InfiniteBaths,"Fractured Vessel"
-KinkyDungeonInventoryItemDLSE_InfiniteBathsDesc,"Try as you might, it can never be filled."
-KinkyDungeonInventoryItemDLSE_InfiniteBathsDesc2,"Deals pierce damage. Deals 50 soap damage instead on vulnerable targets. The waters drench yourself and targets hit, granting fire resist, ice/electric weakness, and conductivity."
-ItemPickupDLSE_InfiniteBaths,"You pick up an ivory blade that flows with water!"
-KinkyDungeonSpecialDLSE_InfiniteBaths,"???: Not Implemented, uh-oh."
+KinkyDungeonInventoryItemDLSE_RapierWater,"Fractured Vessel"
+KinkyDungeonInventoryItemDLSE_RapierWaterDesc,"Try as you might, it can never be filled."
+KinkyDungeonInventoryItemDLSE_RapierWaterDesc2,"Deals pierce damage. Deals 50 soap damage instead on vulnerable targets. The waters drench yourself and targets hit, granting fire resist, ice/electric weakness, and conductivity."
+ItemPickupDLSE_RapierWater,"You pick up an ivory blade that flows with water!"
+KinkyDungeonSpecialDLSE_RapierWater,"???: Not Implemented, uh-oh."
 
 KinkyDungeonSpellDLSE_HalberdHew,"Hew"
 KinkyDungeonSpellCastDLSE_HalberdHew,
