Enable Toys MCM Option

--- a/Translations/DLSE_EN.csv
+++ b/Translations/DLSE_EN.csv
@@ -4,6 +4,7 @@ KDModButtonDLSEMCM_Whips,"Enable Whips"
 KDModButtonDLSEMCM_Halberds,"Enable Halberds"
 KDModButtonDLSEMCM_Colossals,"Enable Colossal Weapons"
 KDModButtonDLSEMCM_ThrustingSwords,"Enable Thrusting Swords"
+KDModButtonDLSEMCM_Toys,"Enable Toys (Aroused Mode Only)"
 KDModButtonDLSEMCM_Shops,"Add new items to The Shoppe"
 KDModButtonDLSEMCM_Classes,"Enable new Class Spells"
 KDModButtonDLSEMCM_Light,"Enable new Light Spells"
