--- a/Translations/DLSE_EN.csv
+++ b/Translations/DLSE_EN.csv
@@ -162,6 +162,12 @@ KinkyDungeonInventoryItemDLSE_MagicEpeeDesc,"The flexible blade thrums with powe
 KinkyDungeonInventoryItemDLSE_MagicEpeeDesc2,"Deals pierce damage, increased to 35 against vulnerable targets. The blade's enchantment guides itself towards your target, even ghosts."
 ItemPickupDLSE_MagicEpee,"You pick up an enchanted fencing sword."
 
+KinkyDungeonInventoryItemDLSE_FreezingPoint,"Freezing Point"
+KinkyDungeonInventoryItemDLSE_FreezingPointDesc,"This broken blade mends itself with ice!"
+KinkyDungeonInventoryItemDLSE_FreezingPointDesc2,"Deals pierce damage. Forms a frigid blade over 4 turns that deals 10 bonus ice damage, increased to 40 against vulnerable targets. Special attack launches the blade."
+ItemPickupDLSE_FreezingPoint,"You pick up the frigid hilt of a broken sword."
+KinkyDungeonSpecialDLSE_FreezingPoint,"Frozen Needle: Launch the ice blade as a projectile."
+
 KinkyDungeonInventoryItemDLSE_FracturedVessel,"Fractured Vessel"
 KinkyDungeonInventoryItemDLSE_FracturedVesselDesc,"Try as you might, it can never be filled."
 KinkyDungeonInventoryItemDLSE_FracturedVesselDesc2,"Deals pierce damage. Deals 50 soap damage instead on vulnerable targets. The waters drench yourself and targets hit, granting fire resist, ice/electric weakness, and conductivity."
