--- a/Translations/DLSE_EN.csv
+++ b/Translations/DLSE_EN.csv
@@ -186,10 +186,22 @@ KinkyDungeonInventoryItemDLSE_EstocDesc,"Estoc is bestoc."
 KinkyDungeonInventoryItemDLSE_EstocDesc2,"Deals pierce damage. Deals 60 slash damage instead against vulnerable targets."
 ItemPickupDLSE_MagicEpee,"You pick up an oversized thrusting sword."
 
-KinkyDungeonInventoryItemDLSE_FreezingPoint,"Freezing Point"
-KinkyDungeonInventoryItemDLSE_FreezingPointDesc,"This broken blade mends itself with ice!"
-KinkyDungeonInventoryItemDLSE_FreezingPointDesc2,"Deals pierce damage. Draws 30 charge over 5 turns to form a frigid blade that deals 10 bonus ice damage, increased to 40 against vulnerable targets. Special attack launches the blade."
+KinkyDungeonInventoryItemDLSE_FreezingPoint,"Broken Rapier"
+KinkyDungeonInventoryItemDLSE_FreezingPointDesc,"It was once an elegant blade."
+KinkyDungeonInventoryItemDLSE_FreezingPointDesc2,"The broken blade is almost worthless in combat. However, the hilt seems to resonate with ancient power crystals?"
+
+KinkyDungeonInventoryItemDLSE_FreezingPointBroken,"Broken Rapier"
+KinkyDungeonInventoryItemDLSE_FreezingPointBrokenDesc,"It was once an elegant blade."
+KinkyDungeonInventoryItemDLSE_FreezingPointBrokenDesc2,"The broken blade is almost worthless in combat. However, the hilt seems to resonate with ancient power crystals?"
+
+KDFreezingPointTransformation,"Your broken rapier transforms when exposed to an ancient power source!"
+
+KinkyDungeonInventoryItemDLSE_FreezingPointTransformed,"Freezing Point"
+KinkyDungeonInventoryItemDLSE_FreezingPointTransformedDesc,"This broken blade mends itself with ice!"
+KinkyDungeonInventoryItemDLSE_FreezingPointTransformedDesc2,"Deals pierce damage. Draws 30 charge over 5 turns to form a frigid blade that deals 10 bonus ice damage, increased to 40 against vulnerable targets. Special attack launches the blade."
+
 ItemPickupDLSE_FreezingPoint,"You pick up the frigid hilt of a broken sword."
+LootRubbleDLSE_FreezingPoint,"You find a broken rapier, its blade snapped in two."
 KinkyDungeonSpecialDLSE_FreezingPoint,"Frozen Needle: Launch the ice blade as a projectile."
 KDPrereqFailFPLoaded,"The weapon needs to form its ice blade first."
 KinkyDungeonBuffDLSE_FreezingPointLoad,"Reforming: Your weapon is freezing a new blade."
