--- a/Translations/DLSE_EN.csv
+++ b/Translations/DLSE_EN.csv
@@ -6,6 +6,7 @@ KDModButtonDLSEMCM_Colossals,"Enable Colossal Weapons"
 KDModButtonDLSEMCM_ThrustingSwords,"Enable Thrusting Swords"
 KDModButtonDLSEMCM_Toys,"Enable Toys (Aroused Mode Only)"
 KDModButtonDLSEMCM_Shops,"Add new items to The Shoppe"
+KDModButtonDLSEMCM_Epicenters,"Add new items to Epicenters"
 KDModButtonDLSEMCM_Classes,"Enable new Class Spells"
 KDModButtonDLSEMCM_Light,"Enable new Light Spells"
 KDModButtonDLSEMCM_Shadow,"Enable new Shadow Spells"
@@ -170,7 +171,7 @@ KinkyDungeonInventoryItemDLSE_HalberdRoyalDesc2,"Ranged attacks deal severe slas
 ItemPickupDLSE_HalberdRoyal,"You find a regal looking halberd, replete with golden trim."
 KinkyDungeonSpecialDLSE_HalberdRoyal,"Hew: Bring the blade down upon an enemy at 2 range."
 
-KinkyDungeonInventoryItemDLSE_ColossalSword,"Colossal Sword"
+KinkyDungeonInventoryItemDLSE_ColossalSword,"Elegy"
 KinkyDungeonInventoryItemDLSE_ColossalSwordDesc,"No mortal was ever intended to wield a sword like this..."
 KinkyDungeonInventoryItemDLSE_ColossalSwordDesc2,"Deals terrifying slash damage and stuns the target."
 ItemPickupDLSE_ColossalSword,"You struggle to pick up a sword as big as yourself!"
