Update player titles.

--- a/Translations/DLSE_EN.csv
+++ b/Translations/DLSE_EN.csv
@@ -241,6 +241,6 @@ KDDLSE_MaceInquisitor_OFF,"You flick the switch OFF, and the weapon is silent."
 KDPlayerTitleCategory_DLSE_PlayerTitles,DollLia's Toy Box
 
 KDPlayerTitle_DLSE_SpellMasteryLight,Blind Angel
-KDPlayerTitleDesc_DLSE_SpellMasteryLight,Unlocked by learning every new spell under Blessing of Light.|- Purging Cross|- Leap of Faith|- Divine Guidance|- Wrathful Smite
+KDPlayerTitleDesc_DLSE_SpellMasteryLight,Unlocked by learning every new spell under Blessing of Light.|- Waves of Light|- Purging Cross|- Leap of Faith|- Divine Guidance|- Wrathful Smite
 KDPlayerTitle_DLSE_SpellMasteryShadow,Shadow Doll
 KDPlayerTitleDesc_DLSE_SpellMasteryShadow,Unlocked by learning every new spell under Blessing of Shadow.|- Dark Scattershot|- Whirling Scythe|- Wicked Edges|- Blade of Darkness
